Message read and privacy

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <div style="float:left; min-width:375px;">
       <ul id='footer-info'>
         <li><%= link_to "Termos e condições", terms_and_condition_path %></li>
-        <li><a href="#">Privacidade</a></li>
+        <li><%= link_to "Privacidade", privacy_path %></li>
         <li><a href="#">Contactos</a></li>
       </ul>
     </div>
