[Update Fix] Contacte-nos

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,7 @@
       <ul id='footer-info'>
         <li><%= link_to "Termos e condições", terms_and_condition_path %></li>
         <li><%= link_to "Privacidade", privacy_path %></li>
-        <li><a href="#">Contactos</a></li>
-      </ul>
+        <li><a href="#" data-toggle="modal" data-target="#modalContact" >Contacte-nos</a></li>      </ul>
     </div>
     <div style="float:right; min-width:375px; text-align:center;">
       <p style="color:white">© <%= Time.now.year %> AGROSOCIAL. Todos os direitos reservados.</p>
