--- a/app/views/academy/tutorials/show.html.erb
+++ b/app/views/academy/tutorials/show.html.erb
@@ -83,7 +83,7 @@
           </div>
         </div>
         
-        <div class="pull-right">
+        <div class="pull-right" style="width">
           <div class="fb-share-button sharebutton" data-href="<%= academy_tutorial_url(@academy_tutorial) %>" data-type="button"></div>
           <div class="sharebutton"><a href="https://twitter.com/share" class="twitter-share-button" data-count="none"
             data-url="<%= academy_tutorial_url(@academy_tutorial) %>"
