--- a/app/views/academy/workshops/show.html.erb
+++ b/app/views/academy/workshops/show.html.erb
@@ -80,7 +80,7 @@
         </div>
       </div>
         
-      <div class="pull-right">
+      <div class="pull-right" style="width">
         <div class="fb-share-button sharebutton" data-href="<%= academy_workshop_url(@academy_workshop) %>" data-type="button"></div>
         <div class="sharebutton"><a href="https://twitter.com/share" class="twitter-share-button" data-count="none"
           data-url="<%= academy_workshop_url(@academy_workshop) %>"
