--- a/app/views/messages/_messages_ads.html.erb
+++ b/app/views/messages/_messages_ads.html.erb
@@ -34,7 +34,7 @@
           <% if t.is_close == 0 %>
           <%= link_to "Fechar Negócio", done_message_path(id_ad: @ad.id, user_id: t.user_receiver(current_user)), :data => { :confirm => "Tem a certeza que pertende fechar este negócio?" }, :class => "btn btn-primary ", :style => ""  if @ad.user_id == current_user.id %>
 
-          <%= link_to "Fechar Conversa", cancel_message_path(id_ad: @ad.id,user_id: t.user_receiver(current_user)), :data => { :confirm => "Tem a certeza que pertende eliminar a troca de mensagem com este utilizador?" }, :class => "btn btn-primary pull-right", :style => ""  if @ad.user_id == current_user.id %>
+          <%= link_to "Cancelar Conversa", cancel_message_path(id_ad: @ad.id,user_id: t.user_receiver(current_user)), :data => { :confirm => "Tem a certeza que pertende eliminar a troca de mensagem com este utilizador?" }, :class => "btn btn-primary pull-right", :style => ""  if @ad.user_id == current_user.id %>
           <% end %>
         </h4>
 
