--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,8 @@
   <title>Agrosocial</title>
   <script src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
   
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  <!--Google Fonts -->
+  <%= stylesheet_link_tag    "application", media: "all" %>
+  <%= javascript_include_tag "application","user" %>  <!--Google Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
 
