--- a/app/views/layouts/errors.html.erb
+++ b/app/views/layouts/errors.html.erb
@@ -3,11 +3,11 @@
 <head>
   <title>Agrosocial</title>
 
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all" %>
 
-  <%= stylesheet_link_tag "bootstrap","errors","data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "bootstrap","errors" %>
 
-  <%= javascript_include_tag "application","user" "data-turbolinks-track" => true %>  <!--Google Fonts -->
+  <%= javascript_include_tag "application","user"  %>  <!--Google Fonts -->
 
 
   <link rel="shortcut icon" href="">
