[fix] price_type in feed+ beta header

--- a/app/views/feeds/_elem_feed.html.erb
+++ b/app/views/feeds/_elem_feed.html.erb
@@ -41,7 +41,7 @@
 								      			<i class="fa fa-map-marker pro_title"></i> <%= ad.city.city unless ad.city.blank? %>
 								      		</span>
 								      		<span style="float:right; margin-right:40px;">
-								      			<i class="fa fa-eur pro_title"></i> <%= ad.price %>
+								      			<i class="fa fa-eur pro_title"></i> <%= ad.price %><%= ad.price_type.name %>
 								      		</span>
 								      	</div>
 								    </div>
