--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
     <a href="<% if user_signed_in? %> <%= feed_path %> <% else %> <%= ads_path %> <% end %>
       "><img id="agrosocial_logo" src="/assets/logo_button.svg" alt="AgroSocial Logo" class="img-circle"></a>
       <a class="navbar-brand" id="brandAgro" href="<% if user_signed_in? %> <%= feed_path %> <% else %> <%= ads_path %> <% end %>
-        ">AgroSocial</a>
+        ">AgroSocial <small>BETA</small></a>
       </div>
 
 
